--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "bbtodo"]
 	path = bbtodo
 	url = git@github.com:Mnemotix/bbtodo.git
-[submodule "fake-api"]
-	path = fake-api
+
+[submodule "restapi"]
+	path = restapi
 	url = git@github.com:Mnemotix/fake-api.git
